--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -10,7 +10,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: rgb(51,51,51);
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -76,7 +76,7 @@ a:hover {
   border: 1px solid rgb(153,153,153);
   border-radius: 4px;
   color: rgb(102,102,102);
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin-top: 12px;
   padding: 8px 15px;
   text-decoration: none;
