--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,4 +1,13 @@
+/*Hide scrollbars*/
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  
+    background: transparent;
+}
 
 body {
   color: rgb(102,102,102);
@@ -142,7 +151,7 @@ ol.info-box {
 }
 
 .community {
-  background-image: url('../images/geo-bg.png');
+  background-image: url('../images/geo-bg.svg');
   background-size: 50%;
 }
 
@@ -187,7 +196,7 @@ ol.info-box {
 /*Newsfeed start*/
 
 #news-feed-page .newsfeed {
-  background-image: url('../images/geo-bg.png');
+  background-image: url('../images/geo-bg.svg');
   background-size: 50%;
 }
 
@@ -279,12 +288,14 @@ ol.info-box {
 
 #news-feed-page .logo-news {
   max-width: 95%;
-  height: 100%;
+  /*height: 100%;*/
+
   opacity: 0.5;
-  padding-top: 10px;
+  padding-top: 17px;
 }
 
 #news-feed-page .news-box:hover .logo-news {
+	   vertical-align: middle;
   opacity: 1;
 }
 
