reduce the size of the language swtich links

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -289,3 +289,9 @@ ol.info-box {
   margin: 20px;
 }
 /*Newsfeed end*/
+
+/*translation start*/
+.langSwitch {
+  font-size: medium;
+}
+/*translation end*/
