--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -158,111 +158,49 @@ a:hover {
 
 /*Newsfeed start*/
 
-#news-feed-page .newsfeed {
+.container-fluid.news {
   background-image: url('../images/geo-bg.png');
   background-size: 50%;
+  padding: 50px 0;
 }
 
-#news-feed-page .newschain {
-  background-color: rgb(64,171,92);
-  color: rgb(255,255,255);
-  min-height: 100%;
+.container-fluid.news .card {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 70%;
+  line-height: 160%;
 }
 
-#news-feed-page .news-box {
-  border: 1px solid rgb(180,180,180);
-  border-radius: 8px;
-  color: rgb(160,160,160);
-  margin: 0 auto;
-  max-width: 100%;
-  padding: 10px 20px 0 20px;
-  min-height: 120px;
-  background: #ffffff;
+.latest-news{
+  text-align: right;
 }
 
-#news-feed-page .panel-heading {
-
-    /*padding: 10px 15px;*/
-    border-bottom: 1px solid transparent;
-    border-bottom-color: transparent;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-
-}
-
-#news-feed-page .news-heading span {
-
-    float: left;
-    color: #178db1;
-    /*font-size: 1.8em;*/
-    /*font-family: 'Roboto';*/
-    font-weight: 300;
-    width: 80%;
-
+@media (max-width: 576px) {
+    .latest-news{
+      text-align: left;
+    }
+    .container-fluid.news .card img{
+      margin-bottom: 30px;
+    }
 }
 
 
-#news-feed-page .news-text-content .description {
-
-    float: left;
-    /*color: #178db1;*/
-    font-size: 60%;
-    line-height: 20px;
-    /*font-family: 'Roboto';*/
-    /*font-weight: 300;*/
-    width: 80%;
-
-
-
-}
-#news-feed-page .news-heading time {
-
-    float: right;
-    color: #666;
-    /*font-family: 'Roboto';*/
-    font-style: italic;
-    /*font-weight: 300;*/
-    /*font-size: 1.4em;*/
-    /*padding-top: 6px;*/
-    font-size: 80%;
-    width: 20%;
-    text-align: right;
-
-}
-
-#news-feed-page .image-box{
-  max-width: 95%;
-}
-
-
-#news-feed-page .read-more-link{
-  cursor: pointer;
-  color:  rgb(51,170,255);
-}
-
-#news-feed-page .read-more-link a {
-  color: rgb(51,170,255)!important;
-}
-
-#news-feed-page .read-more-link a:hover {
-  opacity: 0.6!important;
-}
-
-#news-feed-page .logo-news {
-  max-width: 95%;
-  height: 100%;
-  opacity: 0.5;
-  padding-top: 10px;
-}
-
-#news-feed-page .news-box:hover .logo-news {
-  opacity: 1;
-}
-
-#news-feed-page .news-box{
-  margin: 20px;
-}
 /*Newsfeed end*/
+
+.container.faq{
+  margin-bottom: 70px;
+}
+
+.container.faq h3{
+  margin-top: 70px;
+  margin-bottom: 30px;
+}
+
+.container.faq li{
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 40px;
+}
 
 /*translation start*/
 .langSwitch {
