--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,4 +1,5 @@
 
+/*All pages*/
 
 .logo{
   width: 174px;
@@ -19,75 +20,6 @@ footer .container-fluid{
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 100px 0;
-}
-
-.container.hero h2{
-  font-size: 200%;
-}
-
-.container-fluid.green{
-      background-color: rgb(64, 171, 92);
-      padding: 120px 0;
-      color: #fff;
-}
-
-.container-fluid.green h2, .container-fluid.institutions h2{
-      color: #fff;
-      font-size: 250%;
-      margin-bottom: 20px;
-}
-
-.container-fluid.green a, .container-fluid.institutions a{
-      color: #fff;
-}
-
-.container-fluid.institutions{
-  background-image: url('../images/buildings.jpg');
-  color: #fff;
-  padding: 120px 0;
-}
-
-.text-primary{
-  color: rgb(51, 170, 255);
-}
-
-.container-fluid.community{
-    background-image: url('../images/geo-bg.png');
-    background-size: 50%;
-    padding: 120px 0;
-}
-
-.container-fluid.community .card, .communityrow .card .list-group-item{
-  background-color: rgba(255, 255, 255, 0.45);
-}
-
-.learn-more{
-  margin: 70px 0;
-}
-
-.row.jobs{
-  padding: 100px 0;
-}
-
-.chia-icons img{
-  margin: 30px 0;
-}
-
-.heading{
-  margin: 70px 0;
-}
-
-.slogan { text-align:right; }
-
-@media (max-width: 767px) {
-    .slogan { text-align:left; margin-bottom: 20px;}
-}
-
-@media (max-width: 576px) {
-
-    .navbar .container{
-      display: inline-block;
-      text-align: center;}
 }
 
 body {
@@ -132,6 +64,77 @@ a:hover {
   text-decoration: none;
 }
 
+/*Home Page*/
+
+.container.hero h2{
+  font-size: 200%;
+}
+
+.container-fluid.green{
+  background-color: rgb(64, 171, 92);
+  padding: 120px 0;
+  color: #fff;
+}
+
+.container-fluid.green h2, .container-fluid.institutions h2{
+  color: #fff;
+  font-size: 250%;
+  margin-bottom: 20px;
+}
+
+.container-fluid.green a, .container-fluid.institutions a{
+  color: #fff;
+}
+
+.container-fluid.institutions{
+  background-image: url('../images/buildings.jpg');
+  color: #fff;
+  padding: 120px 0;
+}
+
+.text-primary{
+  color: rgb(51, 170, 255);
+}
+
+.container-fluid.community{
+  background-image: url('../images/geo-bg.png');
+  background-size: 50%;
+  padding: 120px 0;
+}
+
+.container-fluid.community .card, .communityrow .card .list-group-item{
+  background-color: rgba(255, 255, 255, 0.45);
+}
+
+.learn-more{
+  margin: 70px 0;
+}
+
+.row.jobs{
+  padding: 100px 0;
+}
+
+.chia-icons img{
+  margin: 30px 0;
+}
+
+.heading{
+  margin: 70px 0;
+}
+
+.slogan { text-align:right; }
+
+@media (max-width: 767px) {
+    .slogan { text-align:left; margin-bottom: 20px;}
+}
+
+@media (max-width: 576px) {
+
+    .navbar .container{
+      display: inline-block;
+      text-align: center;}
+}
+
 .white-leaf {
   filter: brightness(200%) grayscale(100%);
 }
@@ -156,7 +159,7 @@ a:hover {
 }*/
 
 
-/*Newsfeed start*/
+/*News Page*/
 
 .container-fluid.news {
   background-image: url('../images/geo-bg.png');
@@ -184,8 +187,13 @@ a:hover {
     }
 }
 
+/*FAQ page*/
 
-/*Newsfeed end*/
+.container.faq li{
+  list-style-type: none;
+  padding-left: 0px;
+  margin-top: 40px;
+}
 
 .container.faq{
   margin-bottom: 70px;
@@ -194,12 +202,6 @@ a:hover {
 .container.faq h3{
   margin-top: 70px;
   margin-bottom: 30px;
-}
-
-.container.faq li{
-  list-style-type: none;
-  padding-left: 0;
-  margin-top: 40px;
 }
 
 /*translation start*/
