--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -143,7 +143,7 @@ ol.info-box {
   background-size: 50%;
 }
 
-.contribute {
+.hero .contribute {
   background-image: url('../images/geo-bg.png');
   background-size: 50%;
 }
