--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -96,17 +96,24 @@ a:hover {
 }
 
 .logo {
-  max-width: 100%;
+  max-width: 95%;
 }
 
 .hero {
   /* background-color: rgb(225,225,225); */
 }
+.navbar {
+  height:100px;
+  padding: .5rem 5rem!important;
+  border: 1px solid rgba(0,0,0,0.06); 
+  background-color: #FFFFFF;  
+  box-shadow: 0 2px 9px 0 rgba(0,0,0,0.03);}
+}
 
 .header-button {
   font-size: 90%;
   padding-top: 25px;
-  text-align: right;
+  float:right;
 }
 
 .header-button a {
@@ -120,6 +127,7 @@ a:hover {
     background-color: #3aac59;
     width: 140px;
     padding: 10px 25px;
+    float:right;
 }
 
 .header-button a:hover {
@@ -269,7 +277,7 @@ ol li {
   font-size: 18px;
 }
 .page-footer .social_footer {
-display: inline-block;
+display: inline;
 padding-right:20px;
 height:20px;
 width:20px;
@@ -296,9 +304,12 @@ width:20px;
 
 /*Newsfeed start*/
 
-#news-feed-page .newsfeed {
+/*#news-feed-page .newsfeed {
   background-image: url('../images/geo-bg.png');
   background-size: 50%;
+}*/
+#news-feed-page .newsfeed {
+  background-color:#fafafa;
 }
 
 #news-feed-page .newschain {
@@ -308,16 +319,31 @@ width:20px;
 }
 
 #news-feed-page .news-box {
-  border: 1px solid rgb(180, 180, 180);
-  border-radius: 8px;
-  color: rgb(160, 160, 160);
+  border: 1px solid #e7e7e7;
+  border-radius: 3px;
+  height:207px;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.02);
   margin: 0 auto;
   max-width: 100%;
-  padding: 10px 20px 0 20px;
-  min-height: 120px;
+  padding: 40px 40px 0 40px;
   background: #ffffff;
 }
+#news-feed-page h3 {
+  color: #b0b0b0;
+  font-weight: 400;
+  margin-bottom:0px;
+}
+#news-feed-page .wrap:first-child {
+  padding-top:50px;
+  padding-bottom:0px;
 
+}
+#news-feed-page .logo {
+  max-width: 28%;
+}
+#news-feed-page .page-footer .wrap {
+  padding-bottom: 20px!important;
+}
 #news-feed-page .panel-heading {
   /*padding: 10px 15px;*/
   border-bottom: 1px solid transparent;
@@ -328,26 +354,32 @@ width:20px;
 
 #news-feed-page .news-heading span {
   float: left;
-  color: #178db1;
-  /*font-size: 1.8em;*/
+  color: #808080;
+  font-size: 18px;
   /*font-family: 'Roboto';*/
   font-weight: 300;
   width: 80%;
 }
-
+#news-feed-page .news-box:last-child {
+  margin-bottom: 80px;
+}
+#news-feed-page .news-box a {
+  color: #3AAC59;
+}
 #news-feed-page .news-text-content .description {
   float: left;
-  /*color: #178db1;*/
-  font-size: 60%;
-  line-height: 20px;
+  color: #B0B5B3;
+  font-size: 14px;
+  line-height: 21px;
   /*font-family: 'Roboto';*/
   /*font-weight: 300;*/
   width: 80%;
 }
 
+
 #news-feed-page .news-heading time {
   float: right;
-  color: #666;
+  color: #D8D8D8;
   /*font-family: 'Roboto';*/
   font-style: italic;
   /*font-weight: 300;*/
@@ -364,7 +396,7 @@ width:20px;
 
 #news-feed-page .read-more-link {
   cursor: pointer;
-  color: rgb(51, 170, 255);
+  color: #3AAC59;
 }
 
 #news-feed-page .read-more-link a {
@@ -377,7 +409,6 @@ width:20px;
 
 #news-feed-page .logo-news {
   max-width: 95%;
-  opacity: 0.5;
   padding-top: 10px;
 }
 
@@ -386,7 +417,8 @@ width:20px;
 }
 
 #news-feed-page .news-box {
-  margin: 20px 0;
+  margin: 0px 0px 20px 0;
+  
 }
 
 /*Newsfeed end*/
