--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1,5 +1,5 @@
 body {
-  color: rgb(102, 102, 102);
+  color: #939896!important;
   font-family: 'Lato', sans-serif!important;
   font-size: 140%;
   line-height: 155%;
@@ -232,15 +232,7 @@ ol li {
   opacity: 0.3;
 }
 
-.community {
-  background-image: url('../images/geo-bg.png');
-  background-size: 50%;
-}
 
-.hero .contribute {
-  background-image: url('../images/geo-bg.png');
-  background-size: 50%;
-}
 
 .fi {
   background-image: url('../images/buildings.jpg');
@@ -321,6 +313,7 @@ position: absolute;
 
 #main-hero h1 {
   font-size: 2.9rem;
+  font-weight: 700;
 }
 #main-hero p {
   font-size: 22px;
@@ -406,6 +399,13 @@ border-bottom:1px solid #eeeeee;
 #community .sub_link_p {
   display: inline-block;
   margin-bottom: 0px;
+}
+#community .content2 li:first-child a {
+  text-decoration: underline!important;
+}
+
+#community .sub_link:hover {
+  color:#3AAC59!important;
 }
 #community .special {
   max-width: 1200px;
@@ -540,7 +540,7 @@ display: inline!important;
   color: #808080;
   font-size: 18px;
   /*font-family: 'Roboto';*/
-  font-weight: 300;
+  font-weight: 700;
   width: 80%;
 }
 #news-feed-page .news-box:last-child {
@@ -628,7 +628,7 @@ list-style-type: none;
   color: #3AAC59!important;
   padding-left:60px;
   font-size:1.1rem;
-
+  font-weight: 700;
 }
 #faq-page .answer {
   color: #B0B5B3;
