--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -298,6 +298,15 @@ ol li {
 .jobs_link:hover {
   text-decoration: none;
 }
+/*#main-wrapper {
+  background-image: url(/images/background.svg);
+  background-repeat: no-repeat;
+  background-size: 3200px;
+}*/
+#main-wrapper {
+  
+  background: linear-gradient(180deg, rgba(237, 248, 240, 0.17) 100%, rgba(228,255,237,0.9) 0%);
+}
 /*Start of Main Hero*/
 #main-hero {
 
@@ -310,10 +319,11 @@ position: absolute;
     right: 0;
     height: 100%;
     width: 130%;
-    background: linear-gradient(180deg, #B5E2C1 0%, rgba(228,255,237,0.11) 100%);
+    background: linear-gradient(180deg, #B5E2C1 0%, rgba(228,255,237,0.2) 100%);
     transform: skew(0deg,29deg);
     z-index: -1;
 }
+
 
 #main-hero h1 {
   font-size: 2.9rem;
