Updated links on news page

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -594,6 +594,7 @@ display: inline!important;
 #news-feed-page .read-more-link {
   cursor: pointer;
   color: #3AAC59;
+  text-decoration: underline!important;
 }
 
 #news-feed-page .read-more-link a {
