--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -140,7 +140,7 @@ p {
   height:100px;
   padding: .5rem 5rem!important;
   border: 1px solid rgba(0,0,0,0.06);
-  box-shadow: 0 2px 9px 0 rgba(0,0,0,0.03);}
+  box-shadow: 0 2px 9px 0 rgba(0,0,0,0.03);
 }
 
 .header-button {
