Updated Mobile Responsiveness

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -354,6 +354,27 @@ position: absolute;
 #main-hero .wrap:last-child {
   padding-top:40px;
 }
+@media (min-width: 375px) { 
+  #main-hero .col:first-child {
+      padding-top: 0px;
+  }
+  #main-hero .wrap:last-child {
+    padding-top: 0px;
+  }
+  .navbar {
+    padding:2rem!important;
+  }
+}
+@media (min-width: 768px) {
+
+}
+@media (min-width: 992px) { 
+
+}
+@media (min-width: 1200px) { 
+
+}
+
 /*End of Main Hero*/
 /*Start of Annoucements*/
 #announcements {
